# ACCESS-Atmospheric-RTM

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  download_era5.py  noxfile.py  pyproject.toml  setup.cfg  setup.py
access_atmosphere/: __init__.py  download.py  download_era5.py  era5.py  process.py  rtm.py
lib/: access_rtm.f90  access_rtm.h  access_rtm.pyf  atms_abs_routines.f90  build_module.py  column.f90  daily_scene_era5.f90  meson.build  read_era5.f90  rtm.pyx  trig_degrees.f90  wvap_convert.f90
old/: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  setup.cfg
old/access_atmosphere/: download.py
old/lib/: access_rtm.pyf  meson.build  wvap_convert.f90
python/access_atmosphere/: __init__.py  access_atmosphere.pyi  download.py  era5.py  process.py  rtm.py
python/access_atmospheric_rtm/: __init__.py
rtm/: access_rtm.f90  access_rtm_ncep.f90  atms_abs_routines.f90  column.f90  daily_scene_era5.f90  daily_scene_ncep.f90  dielectric_meissner.f90  fdabscoeff.f90  fdcldabs.f90  find_month_day.f90  findncep.f90  generate_standard_scenes.f90  geomod.f90  goff_gratch_vap.f90  meson.build  mk_atmos_tables.f90  read_era5.f90  read_ncep.f90  standard_scene.f90  time_conversions.f90  wvap_convert.f90
src/: error.rs  lib.rs  rtm.rs
src/rtm/: core.rs
