[package]
edition = "2021"
name = "access-atmosphere"
version = "0.3.0-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "access_atmosphere"

[dependencies]
ndarray = "0.15.6"
num-complex = "0.4.2"
numpy = "0.17.2"
once_cell = "1.17.0"
pyo3 = {version = "0.17.3", features = ["extension-module"]}
rayon = "1.6.1"
smallvec = "1.10.0"

[dev-dependencies]
approx = "0.5.1"

[features]
abi3 = ["pyo3/abi3-py38", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
