[package]
name = "access-atmosphere"
version = "0.3.1"

edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "access_atmosphere"

[dependencies]
log = "0.4.20"
ndarray = "0.15.6"
num-complex = "0.4.4"
numpy = "0.19.0"
pyo3 = {version = "0.19.2", features = ["extension-module"]}
pyo3-log = "0.8.3"
rayon = "1.7.0"
smallvec = "1.11.0"

[dev-dependencies]
approx = "0.5.1"

[features]
abi3 = ["pyo3/abi3-py39", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
