[metadata]
name = access-atmosphere
version = 0.0.1
author = "Richard Lindsley"
author_email = "lindsley@remss.com"
url = "http://gitlab.remss.com/lindsley/access-atmospheric-rtm/"

[options]
packages = access-atmosphere
python_requires = >= 3.9
install_requires =
    cdsapi
    cffi >= 1.0.0
cffi_modules =
    build/build_module.py:ffibuilder

[options.package_data]
* = build/access-atmosphere/*.so

[flake8]
max-line-length = 88
ignore = E203

[pycodestyle]
max-line-length = 88
ignore = E203