[build-system]
requires = ["setuptools>=45", "wheel", "numpy", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "netCDF4"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "cdsapi"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "access_atmosphere.rtm_f90"
